--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0 24px;
-    padding:0 150px 0 150px;
+    padding:0 50px;
 
 }
 
@@ -28,8 +28,8 @@ header{
 
 .nav-menu{
     display: flex;
-    /* justify-content: space-between; */
-    /* align-items: center; */
+    /* justify-content: space-between; 
+    align-items: center; */
     gap: 40px;
 }
 
@@ -42,4 +42,10 @@ a{
     font-family: 'Aleo', serif;
     font-weight: 700;
     text-decoration: none;
+}
+
+@media screen and (max-width: 680px) {
+    .nav-menu{
+        display: none;
+    }
 }
