--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ header{
 
 }
 
+span{
+    background-color: ;
+}
+
 .navbar img{
     width: 90px;
 }
@@ -30,22 +34,33 @@ header{
     display: flex;
     /* justify-content: space-between; 
     align-items: center; */
-    gap: 40px;
+    gap: 30px;
 }
 
 li{
     list-style: none;  
 }
 
-a{
+nav ul li a{
     color: #000000;
     font-family: 'Aleo', serif;
     font-weight: 700;
     text-decoration: none;
+    letter-spacing: 1.5px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
-@media screen and (max-width: 680px) {
+nav ul li a:hover, nav ul li a.active{
+    background-color: rgba(49, 105, 128, 0.116);
+}
+
+@media screen and (max-width: 750px) {
     .nav-menu{
         display: none;
+    }
+
+    .navbar {
+        padding: 0 20px;
     }
 }
