--- a/css/styles.css
+++ b/css/styles.css
@@ -51,12 +51,46 @@ nav ul li a:hover, nav ul li a.active{
     background-color: rgba(49, 105, 128, 0.116);
 }
 
+.navbar .fa-bars{
+    display: none;
+    position: relative;
+    font-size: 25px;
+    color:black ;
+}
+
 @media screen and (max-width: 750px) {
+    .navbar .fa-bars, img{
+        display: block;
+        padding: 0 20px;
+        color: white;
+
+    }
+
+
+    .nav-menu a{
+        color: white;
+     } 
+/*  */
     .nav-menu{
-        display: none;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        backdrop-filter: blur(20px);
+        align-items: center;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.438);
+    }
+
+    .navbar .nav-menu{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
     }
 
     .navbar {
-        padding: 0 20px;
+        padding: 0;
     }
 }
