--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ header{
     background-color: white;
     position: fixed;
     width: 100%;
+    box-shadow: 0 0 25px #D0D0D0;
 }
 
 .navbar{
@@ -39,6 +40,7 @@ li{
 
 nav ul li a{
     color: #000000;
+    /* font-size: 1em; */
     font-family: 'Aleo', serif;
     font-weight: 700;
     text-decoration: none;
@@ -48,7 +50,7 @@ nav ul li a{
 }
 
 nav ul li a:hover, nav ul li a.active{
-    background-color: rgba(49, 105, 128, 0.116);
+    background-color: rgba(47, 149, 167, 0.36);
 }
 
 .navbar .fa-bars{
@@ -58,19 +60,22 @@ nav ul li a:hover, nav ul li a.active{
     color:black ;
 }
 
+
+/*************************** Style Mobile ***********************************/
+
 @media screen and (max-width: 750px) {
     .navbar .fa-bars, img{
         display: block;
         padding: 0 20px;
-        color: white;
+        /* color: white; */
 
     }
 
 
-    .nav-menu a{
-        color: white;
-     } 
-/*  */
+    /* .nav-menu a{
+        color: white; 
+    } */
+
     .nav-menu{
         top: 0;
         left: 0;
@@ -82,15 +87,26 @@ nav ul li a:hover, nav ul li a.active{
         width: 100%;
         height: 100vh;
         background-color: rgba(0, 0, 0, 0.438);
+        margin-left: -100%;
+        transition: all 0.5s ease;
     }
 
-    .navbar .nav-menu{
+    .nav-menu.mobile-menu{
+        margin-left: 0;
+    }
+
+    .navbar ul{
         display: flex;
         align-items: center;
         flex-direction: column;
     }
 
+    .navbar ul li{
+        margin: 25px 0;
+        font-size: 1.2em;
+    }
+
     .navbar {
         padding: 0;
-    }
+     } 
 }
