--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,300;0,400;0,700;1,300&family=Crimson+Pro:wght@200;500&family=Prompt:wght@200&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;1,300&family=Vast+Shadow&display=swap');
 
 *{
+    font-family: 'Aleo', serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
+/* body{
+    min-height: 100vh;
+} */
 
 header{
     background-color: white;
@@ -51,6 +56,7 @@ nav ul li a{
 
 nav ul li a:hover, nav ul li a.active{
     background-color: rgba(47, 149, 167, 0.36);
+    color: red;
 }
 
 .navbar .fa-bars{
@@ -59,19 +65,14 @@ nav ul li a:hover, nav ul li a.active{
     font-size: 25px;
     color:black ;
 }
-
-
 /*************************** Style Mobile ***********************************/
 
 @media screen and (max-width: 750px) {
     .navbar .fa-bars, img{
         display: block;
-        padding: 0 25px;
+        padding: 0 15px;
         /* color: white; */
     }
-
-    
-
     /* .nav-menu a{
         color: white; 
     } */
@@ -110,3 +111,223 @@ nav ul li a:hover, nav ul li a.active{
         padding: 0;
      } 
 }
+
+main{
+    height: 100px;
+}
+
+/************************* Footer Styles  ***********************************/
+
+footer{
+    /* margin-top: 50px;  */
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    
+    background: white;
+    box-shadow: 0 0 5px 0 #D0D0D0;
+
+}
+
+/* Le grand trait apres l'en-tete du footer  */
+
+footer::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 210px;
+    height: 1px;
+    width: 100%;
+    background: #000000;
+}
+
+        /* redimention icon footer */
+footer img{
+    width: 90px;
+}
+
+
+footer .content{
+    max-width: 1750px;
+    margin: auto;
+    padding: 30px 40px 40px 40px;
+}
+
+footer .content .top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.content .top .logo-details{
+    display: flex;
+    color: black;
+    font-size: 30px; 
+    font-weight: bolder;
+    line-height: 60px;
+   justify-content: space-between;
+}
+
+.content .top .logo-details samp{
+    line-height: 40px;
+    padding: 15px;
+}
+
+
+.content .top .media-icons{
+    display: flex;
+}
+
+.content .top .media-icons a{
+    height: 40px;
+    width: 40px;
+    margin: 0 8px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 17px;
+    color: white;
+    text-decoration: none;
+    transition: all 0.4s ease;
+}
+
+.top .media-icons a:nth-child(1){
+    background: #4267B2;
+}
+
+.top .media-icons a:nth-child(1):hover{
+    background: #fff;
+    color: #4267B2;
+    box-shadow: 0 0 3px 0 #D0D0D0;
+
+}
+
+.top .media-icons a:nth-child(2){
+    background: #1DA1F2;
+}
+
+.top .media-icons a:nth-child(2):hover{
+    background: #fff;
+    color: #1DA1F2;
+    box-shadow: 0 0 3px 0 #D0D0D0;
+
+}
+
+.top .media-icons a:nth-child(3){
+    background: #E1306C;
+}
+
+.top .media-icons a:nth-child(3):hover{
+    background: #fff;
+    color: #E1306C;
+    box-shadow: 0 0 3px 0 #D0D0D0;
+
+}
+
+.top .media-icons a:nth-child(4){
+    background: #0077B5;
+}
+
+.top .media-icons a:nth-child(4):hover{
+    background: #fff;
+    color: #0077B5;
+    box-shadow: 0 0 3px 0 #D0D0D0;
+
+}
+
+.top .media-icons a:nth-child(5){
+    background: #FF0000;
+}
+
+.top .media-icons a:nth-child(5):hover{
+    background: #fff;
+    color: #FF0000;
+    box-shadow: 0 0 3px 0 #D0D0D0;
+
+}
+
+footer .content .link-boxes{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .content .link-boxes .box{
+    width: calc(100% / 5 -10px);
+}
+
+.content .link-boxes .box .link_name{
+    color: #000000;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+/* Mini trait du sous titre */
+.content .link-boxes .box .link_name::before{
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 35px;
+    left: 0;
+    bottom: -2px;
+    background: #000000;
+}
+
+.content .link-boxes .box li{
+    margin: 6px 0;
+}
+
+.content .link-boxes .box li a{
+    text-decoration: none;
+    opacity: 0.8;
+    transition: all 0.4s ease;
+    font-size: 15px;
+    color: #000000;
+    font-weight: 700;
+}
+
+.content .link-boxes .box li a:hover{
+    opacity: 1;
+    text-decoration: underline;
+    color: #4267B2;  
+}
+
+footer .bottom-footer{
+   width: 100%;
+   background: #e2dede65; 
+}
+
+footer .bottom-footer .text-bottom{
+    max-width: 1250px;
+    margin: auto;
+    padding: 20px 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.bottom-footer .text-bottom span,
+.bottom-footer .text-bottom a{
+    font-size: 16px;
+    font-weight: 500;
+    color: #000000;
+    opacity: 0.8;
+    text-decoration: none;
+} 
+
+.bottom-footer .text-bottom a:hover{
+    opacity: 1;
+    text-decoration: underline;
+}
+
+.bottom-footer .text-bottom a{
+    margin-right: 10px;
+}
+
+@media screen and (max-widht: 800px) {
+    footer .content .top{
+        flex-direction: column;
+    }
+} 
