--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,11 @@ nav ul li a:hover, nav ul li a.active{
 /*************************** Style Mobile ***********************************/
 
 @media screen and (max-width: 750px) {
+
+    header{
+        position: absolute;
+    }
+
     .navbar .fa-bars, img{
         display: block;
         padding: 0 15px;
@@ -85,9 +90,9 @@ nav ul li a:hover, nav ul li a.active{
         backdrop-filter: blur(20px);
         align-items: center;
         position: absolute;
-        width: 100%;
+        width: 50%;
         height: 100vh;
-        background-color: rgba(0, 0, 0, 0.438);
+        background-color: rgba(0, 0, 0, 0.8);
         margin-left: -100%;
         transition: all 0.5s ease;
     }
@@ -100,11 +105,18 @@ nav ul li a:hover, nav ul li a.active{
         display: flex;
         align-items: center;
         flex-direction: column;
+        
     }
 
     .navbar ul li{
         margin: 25px 0;
         font-size: 1.2em;
+        color: white;
+    }
+
+    .navbar ul li a{
+        
+        color: white;
     }
 
     .navbar {
@@ -123,7 +135,6 @@ footer{
     width: 100%;
     bottom: 0;
     left: 0;
-    
     background: white;
     box-shadow: 0 0 5px 0 #D0D0D0;
 
@@ -166,12 +177,12 @@ footer .content .top{
     font-size: 30px; 
     font-weight: bolder;
     line-height: 60px;
-   justify-content: space-between;
+    justify-content: space-between;
 }
 
-.content .top .logo-details samp{
-    line-height: 40px;
-    padding: 15px;
+.content .top .logo-details span{
+    line-height: 60px;
+    /* padding: 15px; */
 }
 
 
@@ -254,7 +265,7 @@ footer .content .link-boxes{
 }
 
 footer .content .link-boxes .box{
-    width: calc(100% / 5 -10px);
+    width: calc(100% / 5 - 10px);
 }
 
 .content .link-boxes .box .link_name{
@@ -278,6 +289,7 @@ footer .content .link-boxes .box{
 
 .content .link-boxes .box li{
     margin: 6px 0;
+    position: 0;
 }
 
 .content .link-boxes .box li a{
@@ -326,8 +338,79 @@ footer .bottom-footer .text-bottom{
     margin-right: 10px;
 }
 
-@media screen and (max-widht: 800px) {
-    footer .content .top{
-        flex-direction: column;
+@media (max-width: 830px) {
+    .content .top .logo-details span{
+        font-size: 25px;
+        /* font-weigh: 400; */
     }
 } 
+
+@media (max-width: 788px) {
+    .content .top .logo-details span{
+        font-size: 22px;
+    }
+} 
+
+@media (max-width: 750px) {
+    footer img{
+        width: 0;   
+    }
+} 
+
+@media (max-width: 720px) {
+
+    footer img{
+        width: 90px;   
+    }
+
+    footer .content .top{
+        flex-direction: column;
+        
+    }
+
+    footer::before{
+        top: 270px;
+    }
+
+    .content .top .media-icons{
+        margin-top: 16px;
+    }
+} 
+
+@media screen and (max-width: 600px) {
+
+    footer .content .link-boxes .box{
+        width: calc(100% / 2 - 10px);
+    }
+
+    footer .content .link-boxes{
+        flex-flow: wrap;
+    }
+    
+}
+
+@media (max-width: 530px) {
+    .bottom-footer .text-bottom span,
+    .bottom-footer .text-bottom a{
+        font-size: 12px;
+    } 
+
+}
+
+@media (max-width: 430px) {
+    .content .top .logo-details span{
+        font-size: 12px;
+        /* font-weigh: 400; */
+    }
+
+    footer .bottom-footer .text-bottom{
+        flex-direction: column;
+        font-size: 16px;
+        text-align: center;
+    }
+
+   
+
+}
+
+
